--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class="col-lg-6" style="padding: 0;">
-            <img class="food_img-right" src="../../assets/images/burger.png" alt="">
+            <img class="food_img-right" src="https://i.postimg.cc/FKbyHF1w/burger.png" alt="">
         </div>
     </div>
 </div>
