--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,8 @@
             <div class=" col-lg-1 col-md-1"></div>
             <div class=" col-lg-7 col-xl-6 col-md-9">
                 <h1>Best Food in Town<div class="yellow-hr"></div>awaits you </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde architecto autem expedita voluptatibus
-                    voluptates, libero eveniet aperiam accusantium.</p>
+                <p>Take a moment to explore Hometel Flavours and you’ll find a whole bunch of tasty recipes. There are features, recipes and fun contests, brought together with the ethos that
+                    cooking and eating well brings families together and makes us healthier and happier.</p>
                 <a routerLink="menu">Explore Food Items <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
