--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="logoDiv">
       <a class="navbar-brand" routerLink="">
-        <img class="brand-logo" src="../../../assets/images/logo.svg" alt="">
+        <img class="brand-logo" src="assets/images/logo.svg" alt="">
       </a>
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
