--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -115,7 +115,7 @@
 <div class=" restro_bg">
     <div class="row restro_row" style="width: 100%">
         <div class="col-md-6 col-lg-7 col-sm-12 d-flex align-items-end justify-content-center">
-            <img class="chef_img" src="https://i.postimg.cc/wjZfmBqv/chef.png" alt="">
+            <img class="chef_img" src="https://bdiksha230.github.io/hometelflavours/assets/images/chef.png" alt="">
         </div>
         <div class="col-md-5 col-lg-4 col-sm-9">
             <div class="delicious_right">
