--- a/src/app/sharepage/footer/footer.component.css
+++ b/src/app/sharepage/footer/footer.component.css
@@ -50,6 +50,9 @@ i{
 .logoDiv{
     width: 100%;
 }
+.logoDiv a{
+    text-decoration: none !important;
+}
 
 .logoDiv p{
     color: var(--orange);
