--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,8 @@
             <div class=" col-lg-1 col-md-1"></div>
             <div class=" col-lg-7 col-xl-6 col-md-9">
                 <h1>Best Food in Town<div class="yellow-hr"></div>awaits you </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde architecto autem expedita voluptatibus
-                    voluptates, libero eveniet aperiam accusantium.</p>
+                <p>Take a moment to explore Hometel Flavours and you’ll find a whole bunch of tasty recipes. There are features, recipes and fun contests, brought together with the ethos that
+                    cooking and eating well brings families together and makes us healthier and happier.</p>
                 <a routerLink="menu">Explore Food Items <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -115,7 +115,7 @@
 <div class=" restro_bg">
     <div class="row restro_row" style="width: 100%">
         <div class="col-md-6 col-lg-7 col-sm-12 d-flex align-items-end justify-content-center">
-            <img class="chef_img" src="../../assets/images/chef.png" alt="">
+            <img class="chef_img" src="https://i.postimg.cc/t4Qp5SCJ/chef.png" alt="">
         </div>
         <div class="col-md-5 col-lg-4 col-sm-9">
             <div class="delicious_right">
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class="col-lg-6" style="padding: 0;">
-            <img class="food_img-right" src="../../assets/images/burger.png" alt="">
+            <img class="food_img-right" src="https://i.postimg.cc/Kc3YDgr9/burger.png" alt="">
         </div>
     </div>
 </div>
