--- a/src/app/pages/menu/menu.component.css
+++ b/src/app/pages/menu/menu.component.css
@@ -1,5 +1,5 @@
  .menu_section_1{
-     background: url("../../../assets/images/Beach_Restaurants.webp") no-repeat center;
+     background: url("https://i.postimg.cc/1X6LTSJd/beach.webp") no-repeat center;
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
@@ -68,9 +68,7 @@
     text-transform: uppercase;
     font-weight: 600;
     text-decoration: none;
-    font-size: 1.2rem;
-  
-    
+    font-size: 1.2rem; 
  
   }
   
@@ -155,5 +153,7 @@
     }
   }
   @media screen and (max-device-width: 563px){
-
+    .tab button {
+       font-size: 0.7rem;
+    }
   }
