--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -21,13 +21,13 @@
             <!-- ICON -->
             <div class="Footer_center col-lg-3 d-flex justify-content-end">
                 <div class="socialicon">
-                    <img src="../../../assets/images/fb.png" alt="">
+                    <img src="https://i.postimg.cc/tTjNXH5P/fb.png" alt="">
                 </div>
                 <div class="socialicon">
-                    <img src="../../../assets/images/insta.png" alt="">
+                    <img src="https://i.postimg.cc/FRzskYDQ/insta.png" alt="">
                 </div>
                 <div class="socialicon">
-                    <img src="../../../assets/images/twitter.png" alt="">
+                    <img src="https://i.postimg.cc/FzP6dKWw/twitter.png" alt="">
                 </div>
             </div>
         </div>
