--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,6 @@
 }
 body{
     height: 100vh;
-    font-family:Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -48,6 +47,6 @@ body{
         margin: 10px;
     }
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
